@@ -1,3 +1,10 @@
+2016-04-28  Par Olsson  <par.olsson@windriver.com>
+2016-04-28  Simon Marchi  <simon.marchi@ericsson.com>
+
+	* tracepoint.c (write_inferior_int8): New function.
+	(cmd_qtenable_disable): Write enable flag using
+	write_inferior_int8.
+
 2016-04-25  Yao Qi  <yao.qi@linaro.org>
 
 	* linux-low.c (lwp_signal_can_be_delivered): Adjust.
